<resources>
    <string name="app_name">Teste Framework</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="insert_data_login">Insira seus dados para entrar:</string>
    <string name="welcome">Bem vindo!</string>
    <string name="verify_data">Verifique seus dados e tente novamente</string>
    <string name="verify_email">Verifique o endereço de email</string>
    <string name="verify_password">Verifique se a senha está correta</string>
    <string name="error_updating_cart">Erro ao atualizar o carrinho</string>
    <string name="products">Produtos</string>
    <string name="add_to_cart">Adicionar ao carrinho</string>
    <string name="items_in_cart">%1$d itens no carrinho</string>
    <string name="search">Pesquisar por nome</string>
    <string name="cart">Carrinho</string>
    <string name="total_value">Valor total:</string>
    <string name="total_value_string">Valor total: %1$s</string>
    <string name="total_items">Número de itens: %1$d</string>
    <string name="items_number">Número de itens:</string>
    <string name="finish_purchase">Finalizar compra</string>
    <string name="remove_from_cart">Remover todos</string>
    <string name="summary">Resumo</string>
    <string name="finished_purchase">Compra finalizada</string>
    <string name="error_generating_pdf">Erro ao gerar o PDF de recibo</string>
    <string name="thanks_for_shopping">Obrigado por comprar conosco!</string>
</resources>