<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.airbnb.lottie.LottieAnimationView android:id="@+id/lavGroceries"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_fileName="groceries.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textColor="@color/green_200"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/lavGroceries"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tvInsertData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="16sp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/insert_data_login"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/tilEmail"
        style="@style/TextBoxAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email"
        app:hintTextColor="@color/green_200"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tvInsertData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextClusterForward="@id/etPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/tilPassword"
        style="@style/TextBoxAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        app:hintTextColor="@color/green_200"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tilPassword"/>

    <ProgressBar android:id="@+id/pbLogin"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/btLogin"
        app:layout_constraintEnd_toEndOf="@id/btLogin"
        app:layout_constraintBottom_toBottomOf="@id/btLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>