<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/ic_arrow_back_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tvCartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cart"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvCartProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/adapter_cart_products"
            app:layout_constraintTop_toBottomOf="@id/tvCartLabel"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:paddingHorizontal="10dp"
            android:text="@string/summary"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/green_200"
            android:textStyle="bold"
            android:textSize="18sp"
            android:elevation="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/clSummary"
            app:layout_constraintBottom_toTopOf="@id/clSummary"
            app:layout_constraintStart_toStartOf="@id/clSummary"/>

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/clSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded"
            app:layout_constraintTop_toBottomOf="@id/rvCartProducts"
            app:layout_constraintEnd_toEndOf="@id/rvCartProducts"
            app:layout_constraintStart_toStartOf="@id/rvCartProducts">

            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tvTotalItemsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/items_number"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tvTotalItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@id/tvTotalItemsLabel"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tvValueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_value"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvTotalItemsLabel"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tvValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="R$ 5,00"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@id/tvValueLabel"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton android:id="@+id/btFinishPurchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/finish_purchase"
            app:layout_constraintEnd_toEndOf="@id/clSummary"
            app:layout_constraintTop_toBottomOf="@id/clSummary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/clSummary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>